Fixed bug with overflow code not appearing correct on small screens

--- a/Source/Styles/Styles.css
+++ b/Source/Styles/Styles.css
@@ -203,3 +203,13 @@ pre
 {
   white-space: pre-wrap;
 }
+
+code
+{
+  overflow-wrap: break-word;
+}
+
+ul > li
+{
+  overflow-wrap: break-word;
+}
